pages/privacy/privacy.module.css
.privacy {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.privacyBody {
  width: 70vw;
}

.privacyBody h2 {
  color: var(--accent-1);
}

.privacyBody ul, .privacyBody p {
  margin-bottom: 2rem;
}

.privacyBody a {
  color: var(--accent-1);
  text-decoration: none;
  transition: color 0.3s;
}

.privacyBody a:hover {
  color: white;
}

